--- a/home-page/styles/base.css
+++ b/home-page/styles/base.css
@@ -70,15 +70,22 @@ main h2 {
   padding: 5px;
 }
 
+.card li {
+  margin: 5px;
+}
+
 .card ul {
   list-style-type: none;
   text-align: left;
   padding: 10px;
+  font-size: 16px;
 }
 
 .card p {
   padding: 10px;
   text-align: center;
+  font-size: 16px;
+  margin: 8px;
 }
 
 footer {
