--- a/home-page/styles/base.css
+++ b/home-page/styles/base.css
@@ -9,7 +9,7 @@ body {
 }
 
 header {
-  background-color: #52796f;
+  background-color: #23395B;
   display: flex;
   align-items: center;
   justify-content: center;
@@ -24,10 +24,11 @@ header h1 {
   text-align: center;
   padding: 25px;
   font-size: 2rem;
+  color: white;
 }
 
 nav {
-  background-color: #2f3e46;
+  background-color: #161925;
   margin: 0 auto;
   max-width: 800px;
 }
@@ -46,7 +47,7 @@ nav a {
 }
 
 nav a:hover {
-  background-color: #cad2c5;
+  background-color: #8EA8C3;
   color: black;
 }
 
@@ -58,16 +59,18 @@ main h2 {
 
 .card {
   border: solid black 1px;
+  box-shadow: 5px 5px 5px gray;
   margin-left: 15px;
   margin-right: 15px;
   margin-bottom: 15px;
 }
 
 .card h3 {
-  background-color: #52796f;
+  background-color: #23395B;
   text-align: center;
   font-size: 20px;
   padding: 5px;
+  color: white;
 }
 
 .card li {
@@ -89,7 +92,7 @@ main h2 {
 }
 
 footer {
-  background-color: #52796f;
+  background-color: #23395B;
   margin-top: 25px;
 }
 
@@ -97,6 +100,7 @@ footer {
   font-size: 18px;
   padding: 5px;
   text-align: center;
+  color: white;
 }
 
 #footerDate {
