--- a/home-page/styles/base.css
+++ b/home-page/styles/base.css
@@ -59,10 +59,8 @@ main h2 {
 
 .card {
   border: solid black 1px;
-  box-shadow: 5px 5px 5px gray;
-  margin-left: 15px;
-  margin-right: 15px;
-  margin-bottom: 15px;
+  box-shadow: 0px 0px 2px 2px gray;
+  margin: 10px;
 }
 
 .card h3 {
@@ -97,14 +95,14 @@ footer {
 }
 
 #footerCopyRight {
-  font-size: 18px;
+  font-size: 16px;
   padding: 5px;
   text-align: center;
   color: white;
 }
 
 #footerDate {
-  font-size: 16px;
+  font-size: 14px;
   padding: 5px;
   text-align: center;
   color: yellow;
