--- a/home-page/styles/base.css
+++ b/home-page/styles/base.css
@@ -27,28 +27,52 @@ header h1 {
   color: white;
 }
 
-nav {
-  background-color: #161925;
-  margin: 0 auto;
-  max-width: 800px;
+#menu {
+	font-size: 1.5rem;
+	border: 1px solid rgba(0,0,0,.3);
+	padding: 5px;
+	background-color: #eee;
+	color: #000;
+	position: absolute;
+	right: 1rem;
 }
 
-nav ul {
-  list-style-type: none;
-  margin-top: 0px;
+#menu::before {
+	content: "☰";
 }
 
-nav a {
-  color: white;
-  display: block;
-  text-align: center;
-  padding: 1rem;
-  text-decoration: none;
+#menu.open::before {
+	content: "❌";
 }
 
-nav a:hover {
-  background-color: #8EA8C3;
-  color: black;
+.navigation {
+	display: flex;
+	flex-direction: column;
+	list-style: none;
+	background-color: #161925;
+}
+.navigation li {
+	display: none;
+}
+.navigation li a {
+	display: block;
+	padding: 1rem;
+	text-align: center;
+	text-decoration: none;
+	color: #fff;
+}
+.navigation li a:hover {
+	background-color: #8EA8C3;
+	color: black;
+	font-weight: 700;
+}
+
+.open li {
+	display: block;
+	width: 100%;
+}
+.open li a {
+	display: block;
 }
 
 main h2 {
