--- a/home-page/styles/larger.css
+++ b/home-page/styles/larger.css
@@ -1,14 +1,17 @@
 @media (min-width: 640px) {
 
-  nav {
-    max-width: 100%;
+  #menu {
+    display: none;
   }
-  nav ul {
-    display: flex;
-  }
-  nav ul li {
-    flex: 1 1 100%;
-  }
+
+  .navigation {
+		flex-direction: row;
+	}
+
+	.navigation li {
+		display: block;
+		flex: 1 1 100%;
+	}
 
   main {
     height: 100%;
