dark mode button position

--- a/home-page/styles/base.css
+++ b/home-page/styles/base.css
@@ -29,8 +29,8 @@ header h1 {
 
 #mode {
 	position: absolute;
-	top: 1rem;
-	right: 1rem;
+	top: .12rem;
+	right: -.12rem;
 	font-size: 3rem;
 	cursor: pointer;
 }
