--- a/home-page/styles/larger.css
+++ b/home-page/styles/larger.css
@@ -1,17 +1,21 @@
 @media (min-width: 640px) {
-
   #menu {
     display: none;
   }
 
-  .navigation {
-		flex-direction: row;
-	}
+  #mode {
+    top: 0.12rem;
+    right: -0.12rem;
+  }
 
-	.navigation li {
-		display: block;
-		flex: 1 1 100%;
-	}
+  .navigation {
+    flex-direction: row;
+  }
+
+  .navigation li {
+    display: block;
+    flex: 1 1 100%;
+  }
 
   main {
     height: 100%;
@@ -45,12 +49,11 @@
     text-align: center;
     color: white;
   }
-  
+
   #footerDate {
     font-size: 16px;
     padding: 5px;
     text-align: center;
     color: yellow;
   }
-
 }
