--- a/chamber/styles/base.css
+++ b/chamber/styles/base.css
@@ -96,3 +96,26 @@ header {
     padding: 10px;
     margin: 10px;
 }
+
+#events-container{
+    background-color: #A3B18A;
+    padding-bottom: 10px;
+}
+
+#events-container h1 {
+    text-align: center;
+    padding: 10px;
+}
+
+.img-placeholder {
+    width: 325px;
+    height: 325px;
+    border: solid 2px black;
+    background-color: white;
+    margin: 0 auto;
+}
+
+.event-card {
+    text-align: center;
+    margin-bottom: 50px;
+}
