--- a/chamber/styles/base.css
+++ b/chamber/styles/base.css
@@ -1,3 +1,13 @@
+@import url('https://fonts.googleapis.com/css2?family=Lato&family=Varela+Round&display=swap');
+
+h1, h2, h3, h4 {
+    font-family: 'Varela Round', sans-serif;
+}
+
+p, li, button {
+    font-family: 'Lato', sans-serif;
+}
+
 * {
     margin: 0;
     padding: 0;
@@ -69,7 +79,7 @@ header {
     background-color: #6D4C3D;
     color: white;
     text-align: center;
-    font-size: 1.1rem;
+    font-size: 1.0rem;
     padding: 1px;
     margin-top: -4px;
     padding-bottom: 4px;
@@ -126,6 +136,11 @@ header {
 
 .home-card h2 {
     padding: 10px;
+}
+
+.home-card p
+{
+    margin: 5px;
 }
 
 .spotlight-button {
