--- a/chamber/styles/base.css
+++ b/chamber/styles/base.css
@@ -79,7 +79,7 @@ header {
     background-color: #6D4C3D;
     color: white;
     text-align: center;
-    font-size: 1.0rem;
+    font-size: .66rem;
     padding: 1px;
     margin-top: -4px;
     padding-bottom: 4px;
