--- a/chamber/styles/larger.css
+++ b/chamber/styles/larger.css
@@ -5,6 +5,10 @@
         font-size: 1.5rem;
     }
 
+    #home-hero {
+        width: 100%;
+    }
+
     #events-container {
         display: grid;
         grid-template-columns: 1fr 1fr 1fr;
