--- a/home-page/styles/base.css
+++ b/home-page/styles/base.css
@@ -9,7 +9,7 @@ body {
 }
 
 header {
-  background-color: #23395B;
+  background-color: #23395b;
   display: flex;
   align-items: center;
   justify-content: center;
@@ -29,58 +29,58 @@ header h1 {
 
 #mode {
   position: absolute;
-  top: .5rem;
+  top: 0.5rem;
   right: 1rem;
-	font-size: .75rem;
-	cursor: pointer;
+  font-size: 0.75rem;
+  cursor: pointer;
 }
 
 #menu {
-	font-size: 1.5rem;
-	border: 1px solid rgba(0,0,0,.3);
-	padding: 5px;
-	background-color: #eee;
-	color: #000;
-	position: absolute;
-	right: 1rem;
+  font-size: 1.5rem;
+  border: 1px solid rgba(0, 0, 0, 0.3);
+  padding: 5px;
+  background-color: #eee;
+  color: #000;
+  position: absolute;
+  right: 1rem;
 }
 
 #menu::before {
-	content: "☰";
+  content: '☰';
 }
 
 #menu.open::before {
-	content: "❌";
+  content: '❌';
 }
 
 .navigation {
-	display: flex;
-	flex-direction: column;
-	list-style: none;
-	background-color: #161925;
+  display: flex;
+  flex-direction: column;
+  list-style: none;
+  background-color: #161925;
 }
 .navigation li {
-	display: none;
+  display: none;
 }
 .navigation li a {
-	display: block;
-	padding: 1rem;
-	text-align: center;
-	text-decoration: none;
-	color: #fff;
+  display: block;
+  padding: 1rem;
+  text-align: center;
+  text-decoration: none;
+  color: #fff;
 }
 .navigation li a:hover {
-	background-color: #8EA8C3;
-	color: black;
-	font-weight: 700;
+  background-color: #8ea8c3;
+  color: black;
+  font-weight: 700;
 }
 
 .open li {
-	display: block;
-	width: 100%;
+  display: block;
+  width: 100%;
 }
 .open li a {
-	display: block;
+  display: block;
 }
 
 .darkMode {
@@ -91,6 +91,27 @@ header h1 {
 .darkMode .card {
   box-shadow: none;
   border: solid white 1px;
+}
+
+.hero-img {
+  width: 100%;
+  height: auto;
+}
+
+#hero-label {
+  position: absolute;
+  top: 228px;
+  left: 5px;
+  border: 1px solid rgba(0, 0, 0, 0.75);
+  padding: 1rem;
+  box-shadow: 0 0 15px black;
+}
+
+#hero-label p {
+  margin: 0;
+  font-weight: 600;
+  font-size: 1rem;
+  color: black;
 }
 
 main h2 {
@@ -106,7 +127,7 @@ main h2 {
 }
 
 .card h3 {
-  background-color: #23395B;
+  background-color: #23395b;
   text-align: center;
   font-size: 20px;
   padding: 5px;
@@ -139,8 +160,15 @@ main h2 {
   margin: 8px;
 }
 
+iframe {
+  display: block;
+  margin: 0 auto;
+  width: 350px;
+  height: 350px;
+}
+
 footer {
-  background-color: #23395B;
+  background-color: #23395b;
   margin-top: 25px;
 }
 
