--- a/home-page/styles/larger.css
+++ b/home-page/styles/larger.css
@@ -18,6 +18,28 @@
     flex: 1 1 100%;
   }
 
+  .hero-img {
+    width: 100%;
+    height: auto;
+  }
+
+  #hero-label {
+    position: absolute;
+    top: 400px;
+    left: 60px;
+    border: 1px solid rgba(0, 0, 0, 0.75);
+    padding: 1.5rem;
+    box-shadow: 0 0 25px black;
+    color: black;
+  }
+  
+  #hero-label p {
+    margin: 0;
+    padding: 0.25rem;
+    font-weight: 700;
+    font-size: 3rem;
+  }
+
   main {
     height: 100%;
     width: 100%;
@@ -37,6 +59,12 @@
     border: solid black 1px;
     box-shadow: 0px 0px 3px 3px gray;
     margin: 15px;
+  }
+
+  iframe {
+    display: block;
+    margin: 0 auto;
+    width: 90%;
   }
 
   footer {
