--- a/chamber/styles/base.css
+++ b/chamber/styles/base.css
@@ -1,164 +1,159 @@
-@import url('https://fonts.googleapis.com/css2?family=Lato&family=Varela+Round&display=swap');
+@import url('https://fonts.googleapis.com/css2?family=Lato&family=Permanent+Marker&display=swap');
 
-h1, h2, h3, h4 {
-    font-family: 'Varela Round', sans-serif;
-}
-
-p, li, button {
-    font-family: 'Lato', sans-serif;
+body {
+  font-family: 'Lato', sans-serif;
 }
 
 * {
-    margin: 0;
-    padding: 0;
-    box-sizing: border-box;
-  }
+  margin: 0;
+  padding: 0;
+  box-sizing: border-box;
+}
 
 header {
-    background-color: #3a5a40;
+  background-color: #3a5a40;
 }
 
 #menu {
-	font-size: 2rem;
-	padding: 5px;
-	background-color: #3a5a40;
-	color: white;
-	position: absolute;
-	right: .55rem;
-    top: .55rem;
-    border: none;
+  font-size: 2rem;
+  padding: 5px;
+  background-color: #3a5a40;
+  color: white;
+  position: absolute;
+  right: 0.55rem;
+  top: 0.55rem;
+  border: none;
 }
 
 #menu::before {
-	content: "☰";
+  content: '☰';
 }
 
 #menu.open::before {
-	content: "❌";
+  content: '❌';
 }
 
 .navigation {
-	display: flex;
-	flex-direction: column;
-	list-style: none;
-	background-color: #C5AFA4;
+  display: flex;
+  flex-direction: column;
+  list-style: none;
+  background-color: #c5afa4;
 }
 .navigation li {
-	display: none;
+  display: none;
 }
 .navigation li a {
-	display: block;
-	padding: 1rem;
-	text-align: center;
-	text-decoration: none;
-	color: black;
+  display: block;
+  padding: 1rem;
+  text-align: center;
+  text-decoration: none;
+  color: black;
 }
 .navigation li a:hover {
-	background-color: #6D4C3D;
-	color: white;
-	font-weight: 700;
+  background-color: #6d4c3d;
+  color: white;
+  font-weight: 700;
 }
 
 .open li {
-	display: block;
-	width: 100%;
+  display: block;
+  width: 100%;
 }
 .open li a {
-	display: block;
+  display: block;
 }
 
 #home-hero {
-    width: 100%;
+  width: 100%;
 }
 
-#home-banner {
-    background-color: #6D4C3D;
-    color: white;
-    text-align: center;
-    font-size: .66rem;
-    padding: 1px;
-    margin-top: -4px;
-    padding-bottom: 4px;
+#home-title {
+  background-color: #6d4c3d;
+  color: white;
+  text-align: center;
+  font-size: 0.66rem;
+  padding: 1px;
+  margin-top: -4px;
+  padding-bottom: 4px;
 }
 
 #weather-card {
-    margin: 25px;
-    text-align: center;
-    font-size: 1.25rem;
+  margin: 25px;
+  text-align: center;
+  font-size: 1.25rem;
 }
 
 #join-info {
-    font-size: 1.5rem;
-    text-align: center;
-    margin: 10px;
+  font-size: 1.5rem;
+  text-align: center;
+  margin: 10px;
 }
 
 #join-button {
-    display: flex;
-    justify-content: center;
+  display: flex;
+  justify-content: center;
 }
 
 #join-button button {
-    background-color: #3a5a40;
-    color: white;
-    font-size: 2rem;
-    padding: 10px;
-    margin: 10px;
-    border: none;
+  background-color: #3a5a40;
+  color: white;
+  font-size: 2rem;
+  padding: 10px;
+  margin: 10px;
+  border: none;
 }
 
-#events-container{
-    background-color: #A3B18A;
-    padding-bottom: 10px;
+#events-container {
+  background-color: #a3b18a;
+  padding-bottom: 10px;
 }
 
 #events-container h1 {
-    text-align: center;
-    padding-top: 15px;
+  text-align: center;
+  padding-top: 15px;
 }
 
 .img-placeholder {
-    width: 325px;
-    height: 325px;
-    border: solid 2px black;
-    background-color: white;
-    margin: 0 auto;
+  width: 325px;
+  height: 325px;
+  border: solid 2px black;
+  background-color: white;
+  margin: 0 auto;
 }
 
 .home-card {
-    text-align: center;
-    margin-bottom: 50px;
+  text-align: center;
+  margin-bottom: 50px;
 }
 
 .home-card h2 {
-    padding: 10px;
+  padding: 10px;
 }
 
-.home-card p
-{
-    margin: 5px;
+.home-card p {
+  margin: 5px;
 }
 
 .spotlight-button {
-    background-color: #6D4C3D;
-    color: white;
-    font-size: 1.25rem;
-    padding: 10px;
-    margin: 10px;
-    border: none;
+  background-color: #6d4c3d;
+  color: white;
+  font-size: 1.25rem;
+  padding: 10px;
+  margin: 10px;
+  border: none;
 }
 
 #spotlights-container h1 {
-    text-align: center;
+  text-align: center;
 }
 
 footer {
-    background-color: #3a5a40;
-    color: white;
-    padding: 10px;
+  background-color: #3a5a40;
+  color: white;
+  padding: 10px;
 }
 
 .footerCopy {
-    text-align: center;
-    padding-top: 15px;
+  text-align: center;
+  padding-top: 15px;
 }
