--- a/chamber/styles/larger.css
+++ b/chamber/styles/larger.css
@@ -17,14 +17,22 @@
     margin: 0 auto;
   }
 
-  #home-banner {
-    margin-top: -5px;
-    padding-bottom: 5px;
-    font-size: 1.5rem;
-  }
-
   #home-hero {
     width: 100%;
+  }
+
+  #home-banner {
+    display: none;
+  }
+
+  #home-title {
+    background-color: transparent;
+    color: black;
+    font-family: 'Permanent Marker';
+    font-size: 4.25rem;
+    position: absolute;
+    top: 725px;
+    left: 15px;
   }
 
   #events-container {
