--- a/chamber/styles/base.css
+++ b/chamber/styles/base.css
@@ -14,6 +14,10 @@ header {
   background-color: #3a5a40;
 }
 
+#logo {
+  margin: 10px;
+}
+
 #menu {
   font-size: 2rem;
   padding: 5px;
@@ -21,7 +25,7 @@ header {
   color: white;
   position: absolute;
   right: 0.55rem;
-  top: .25rem;
+  top: .8rem;
   border: none;
 }
 
@@ -72,15 +76,17 @@ header {
   color: white;
   text-align: center;
   font-size: 1.78rem;
-  padding: 1px;
+  padding: 5px;
   margin-top: -4px;
   padding-bottom: 4px;
 }
 
 #weather-card {
-  margin: 25px;
+  background-color: #c5afa4;
+  padding: 10px;
+  margin-top: -19px;
   text-align: center;
-  font-size: 1.25rem;
+  font-size: 1.55rem;
 }
 
 #join-info {
@@ -89,18 +95,21 @@ header {
   margin: 10px;
 }
 
-#join-button {
-  display: flex;
-  justify-content: center;
+#join-card {
+  padding: 25px;
+  text-align: center;
+  font-size: 1.4rem;
+  margin: 25px;
 }
 
-#join-button button {
+#join-card button {
   background-color: #3a5a40;
   color: white;
   font-size: 2rem;
   padding: 10px;
   margin: 10px;
-  border: none;
+  border: solid .5px black;
+  border-radius: 5px;
 }
 
 #events-container {
@@ -111,6 +120,12 @@ header {
 #events-container h1 {
   text-align: center;
   padding-top: 15px;
+  font-size: 1.75rem;
+}
+
+#events-container h2 {
+  text-align: center;
+  font-size: 1.3rem;
 }
 
 .events-img {
@@ -121,12 +136,28 @@ header {
     text-align: center;
 }
 
-.img-placeholder {
-  width: 325px;
-  height: 325px;
-  border: solid 2px black;
-  background-color: white;
-  margin: 0 auto;
+.spotlight-img {
+  display: block;
+  margin-left: auto;
+  margin-right: auto;
+}
+
+.spotlight-txt {
+  text-align: center;
+  margin-top: 10px;
+  margin-bottom: 25px;
+  margin-left: 10px;
+  margin-right: 10px;
+}
+
+.spotlight-txt a button {
+  color: white;
+  background-color: #6d4c3d;
+  font-size: 1.25rem;
+  margin-top: 10px;
+  padding: 5px;
+  border: solid 1px black;
+  border-radius: 5px;
 }
 
 .home-card {
@@ -142,18 +173,7 @@ header {
   margin: 5px;
 }
 
-.spotlight-button {
-  background-color: #6d4c3d;
-  color: white;
-  font-size: 1.25rem;
-  padding: 10px;
-  margin: 10px;
-  border: none;
-}
 
-#spotlights-container h1 {
-  text-align: center;
-}
 
 footer {
   background-color: #3a5a40;
