--- a/chamber/styles/larger.css
+++ b/chamber/styles/larger.css
@@ -112,8 +112,7 @@
     color: white;
     background-color: #6d4c3d;
     font-size: 1.75rem;
-    margin-left: 125px;
-    margin-top: 50px;
+    text-align: center;
     padding: 10px;
     border: solid 1px black;
     border-radius: 5px;
