--- a/chamber/styles/larger.css
+++ b/chamber/styles/larger.css
@@ -108,12 +108,13 @@
     font-size: 1.75rem;
   }
 
-  .spotlight-txt a button {
+  .spotlight-button {
+    text-align: center;
     color: white;
     background-color: #6d4c3d;
     font-size: 1.75rem;
-    text-align: center;
     padding: 10px;
+    margin-top: 25px;
     border: solid 1px black;
     border-radius: 5px;
   }
