--- a/chamber/styles/larger.css
+++ b/chamber/styles/larger.css
@@ -110,13 +110,21 @@
 
   .spotlight-button {
     text-align: center;
-    color: white;
     background-color: #6d4c3d;
     font-size: 1.75rem;
     padding: 10px;
     margin-top: 25px;
     border: solid 1px black;
     border-radius: 5px;
+  }
+
+  .spotlight-button a {
+    text-decoration: none;
+    color: white;
+  }
+
+  .spotlight-button a:visited {
+    color: white;
   }
 
   footer {
