--- a/chamber/styles/larger.css
+++ b/chamber/styles/larger.css
@@ -127,6 +127,105 @@
     color: white;
   }
 
+  .discover-grid {
+    display: grid;
+    grid-template-columns: 6fr 7fr;
+  }
+
+  .right picture img {
+    margin: 15px;
+  }
+
+  .right picture figcaption {
+    text-align: center;
+  }
+
+  .visits, .weather, .attractions, .lodging, .eating {
+    border: solid 1px black;
+    margin-top: 10px;
+    margin-left: 45px;
+  }
+
+  .visits {
+    height: 350px;
+    width: 500px;
+  }
+
+  .weather {
+    height: 350px;
+    width: 500px;
+  }
+
+  .weather h2 {
+    text-align: center;
+    padding: 10px;
+    font-size: 2rem;
+  }
+
+  .attractions {
+    height: 750px;
+    width: 500px;
+  }
+
+  .attractions h2 {
+    text-align: center;
+    padding: 10px;
+    font-size: 2rem;
+  }
+
+  .attractions h3 {
+    font-size: 1.25rem;
+    padding: 10px;
+  }
+
+  .attractions ul li {
+    font-size: 1.1rem;
+    padding: 10px;
+  }
+
+  .lodging {
+    height: 400px;
+    width: 500px;
+  }
+
+  .lodging h2 {
+    text-align: center;
+    font-size: 2rem;
+    padding: 10px;
+  }
+
+  .lodging h3 {
+    text-align: center;
+    font-size: 1.25rem;
+    padding: 10px;
+  }
+
+  .lodging ul li {
+    text-align: center;
+    list-style: none;
+    font-size: 1.1rem;
+    padding: 18px;
+  }
+
+  .eating {
+    height: 383px;
+    width: 500px;
+  }
+
+  .eating h2 {
+    text-align: center;
+    font-size: 2rem;
+    padding: 10px;
+  }
+
+  .restaraunt {
+    padding: 10px;
+  }
+
+  #bottom-caption {
+    padding-bottom: 15px;
+  }
+
   footer {
     font-size: 1.25rem;
   }
