audit tool fixes

--- a/chamber/styles/base.css
+++ b/chamber/styles/base.css
@@ -183,7 +183,14 @@ header {
   margin: 5px;
 }
 
-.visits, .weather, .attractions, .lodging, .eating {
+.discover-title {
+  font-family: 'Permanent Marker';
+  text-align: center;
+  font-size: 2.35rem;
+
+}
+
+.visits, .weather, .stats, .attractions, .lodging, .eating {
   text-align: center;
   margin: 25px;
   border: solid 1px black;
@@ -201,7 +208,7 @@ header {
   list-style-type: none;
 }
 
-.weather h2, .attractions h2, .lodging h2, .eating h2 {
+.weather h2, .stats h2, .attractions h2, .lodging h2, .eating h2 {
   background-color: #6d4c3d;
   color: white;
   padding: 5px;
@@ -232,19 +239,6 @@ footer {
 .footerCopy {
   text-align: center;
   padding-top: 15px;
-}
-
-.map iframe {
-  height: 350px;
-  width: 500px;
-  margin-left: 45px;
-  margin-bottom: 10px;
-}
-
-@media (max-width: 768px) {
-  .map iframe {
-    display: none;
-  }
 }
 
 
