--- a/chamber/styles/base.css
+++ b/chamber/styles/base.css
@@ -183,6 +183,8 @@ header {
   margin: 5px;
 }
 
+/* Discover page start */
+
 .discover-title {
   font-family: 'Permanent Marker';
   text-align: center;
