--- a/home-page/styles/base.css
+++ b/home-page/styles/base.css
@@ -93,6 +93,10 @@ header h1 {
   border: solid white 1px;
 }
 
+#hero {
+  position: relative;
+}
+
 .hero-img {
   width: 100%;
   height: auto;
@@ -100,17 +104,17 @@ header h1 {
 
 #hero-label {
   position: absolute;
-  top: 235px;
-  left: 5px;
+  top: 30px;
+  left: 15px;
   border: 1px solid rgba(0, 0, 0, 0.75);
   padding: 1rem;
-  box-shadow: 0 0 15px black;
+  box-shadow: 0 0 3rem black;
 }
 
 #hero-label p {
   margin: 0;
-  font-weight: 600;
-  font-size: 1rem;
+  font-weight: 700;
+  font-size: 1.15rem;
   color: black;
 }
 
