--- a/home-page/styles/base.css
+++ b/home-page/styles/base.css
@@ -108,7 +108,7 @@ header h1 {
   top: 30px;
   left: 10px;
   border: 1px solid rgba(0, 0, 0, 0.75);
-  padding: 1rem;
+  padding: .5rem;
   box-shadow: 0 0 3rem black;
 }
 
