--- a/chamber/styles/larger.css
+++ b/chamber/styles/larger.css
@@ -21,18 +21,14 @@
     width: 100%;
   }
 
-  #home-banner {
-    display: none;
-  }
-
-  #home-title {
-    font-size: 4.5rem;
-  }
-
   #weather-card {
     margin-top: -4px;
     font-size: 1.8rem;
     width: 100%;
+  }
+
+  main h1 {
+    font-size: 4.5rem;
   }
 
   #join-card {
@@ -79,7 +75,7 @@
   }
 
   #spotlight-title {
-    font-size: 2.5rem;
+    font-size: 2.25rem;
     margin-top: 50px;
   }
 
