--- a/home-page/styles/form.css
+++ b/home-page/styles/form.css
@@ -33,3 +33,9 @@ input {
     margin-left: 40px;
     font-size: var(--form-txt-size);
 }
+
+@media (max-width: 639px) {
+    label, #rangevalue, .pswd-msg, input[type=range] {
+        font-size: 1rem;
+    }
+}
