--- a/chamber/styles/base.css
+++ b/chamber/styles/base.css
@@ -93,12 +93,16 @@ main h1 {
   margin: 25px;
 }
 
-#join-card button {
+#join-card p {
+  margin-bottom: 50px;
+}
+
+.joinBtn {
   background-color: #3a5a40;
   color: white;
+  text-decoration: none;
   font-size: 2rem;
   padding: 10px;
-  margin-top: 35px;
   border: solid .5px #3a5a40;
   border-radius: 10px;
 }
@@ -245,6 +249,120 @@ main h1 {
 
 .restaraunt {
   padding: 5px;
+}
+
+/* Join Page Start */
+.join-container h1 {
+  font-size: 2.5rem;
+}
+
+.membership-levels {
+  border: solid #6d4c3d 5px;
+  border-radius: 25px;
+  background-color: #c5afa4;
+  margin: 25px;
+  padding: 25px;
+}
+
+.membership-levels ul li {
+  list-style-type: none;
+  padding: 5px;
+}
+
+.fee {
+  font-weight: bold;
+}
+
+form fieldset {
+  margin: 25px;
+  padding: 25px;
+  border: solid black 1px;
+  border-radius: 10px;
+}
+
+form legend {
+  padding: 0 10px;
+}
+
+form label.above {
+  display: block;
+  margin-bottom: 10px;
+  text-align: left;
+}
+
+input[type="text"],
+input[type="email"],
+input[type="tel"] {
+  width: 100%;
+  height: 44px;
+  padding: 10px;
+  border: solid black 1px;
+  border-radius: 5px;
+}
+
+div.side {
+  text-align: left;
+  margin-top: 5px;
+}
+
+form label.side {
+  display: block;
+  margin-top: 5px;
+  margin-bottom: 5px;
+  text-align: left;
+  padding: 5px;
+}
+
+textarea {
+  width: 100%;
+  height: 100px;
+  padding: 10px;
+  border: solid black 1px;
+  border-radius: 5px;
+}
+
+.sbmtBtn {
+  padding: 10px;
+  font-size: 1.75rem;
+  width: 40%;
+  background-color: #6d4c3d;
+  color: white;
+  border: none;
+  border-radius: 7px;
+  margin-bottom: 25px;
+}
+
+form input:required {
+  border: solid red 2px;
+}
+
+form input:required:valid {
+  border: solid black 1px;
+}
+
+/* Submission page start */
+#tybody {
+  background-color: #c5afa4;
+}
+
+#tymain {
+  text-align: center;
+}
+
+#tymain h1 {
+  font-size: 2.5rem;
+}
+
+#tymain h2 {
+  margin-bottom: 50px;
+}
+
+.homeBtn {
+  background-color: #6d4c3d;
+  color: white;
+  text-decoration: none;
+  padding: 10px;
+  font-size: 1.5rem;
 }
 
 footer {
