--- a/chamber/styles/larger.css
+++ b/chamber/styles/larger.css
@@ -48,14 +48,15 @@
     margin-top: 25px;
   }
 
-  #events-container h1 {
+  #events-container h2 {
     grid-column: 2/3;
-    padding-bottom: 10px;
-    font-size: 2rem;
+    padding-bottom: 15px;
+    font-size: 2.5rem;
   }
 
-  #events-container h2 {
-    font-size: 1.5em;
+  #events-container h3 {
+    font-size: 1.5rem;
+    padding: 10px;
   }
 
   #events-container p {
@@ -75,13 +76,18 @@
   }
 
   #spotlight-title {
-    font-size: 2.25rem;
+    font-size: 2.5rem;
     margin-top: 50px;
   }
 
   #spotlights-container {
     display: grid;
     grid-template-columns: 2fr 2fr;
+  }
+
+  #spotlights-container h3 {
+    font-size: 2rem;
+    padding-bottom: 10px;
   }
 
   .spotlight-img {
