--- a/chamber/styles/larger.css
+++ b/chamber/styles/larger.css
@@ -71,14 +71,11 @@
     font-size: 2.25rem;
   }
 
-  #forecastTitle {
-    font-size: 2rem;
-  }
-
   #forecastContainer p {
-    font-size: 1.6rem;
-    margin-right: 127px;
-    margin-left: 127px;
+    font-size: 1.75rem;
+    margin-left: 120px;
+    margin-right: 120px;
+    margin-top: 10px;
   }
 
   .home-h1 {
