--- a/chamber/styles/larger.css
+++ b/chamber/styles/larger.css
@@ -66,6 +66,11 @@
     font-size: 2.25rem;
   }
 
+  .weather-container img {
+    height: 60px;
+    width: 60px;
+  }
+
   #current-temp,
   figcaption {
     font-size: 2.25rem;
@@ -76,6 +81,12 @@
     margin-left: 120px;
     margin-right: 120px;
     margin-top: 10px;
+  }
+
+  #forecastContainer img {
+    margin-top: 10px;
+    height: 75px;
+    width: 75px;
   }
 
   .home-h1 {
@@ -155,6 +166,8 @@
   #spotlights-container img {
     margin-top: 10px;
     border: solid 3px #4E3B31;
+    width: 450px;
+    height: 450px;
   }
 
   #spotlights-container h3 {
