--- a/chamber/styles/base.css
+++ b/chamber/styles/base.css
@@ -146,11 +146,9 @@ header {
 
 #current-temp,
 #weather-desc {
-  font-size: 1.25rem;
-}
-
-#weather-desc {
-  margin-right: 10px;
+  font-size: 1.15rem;
+  margin-bottom: 15px;
+  margin-top: 5px;
 }
 
 #forecastContainer {
@@ -158,7 +156,6 @@ header {
   justify-content: space-between;
   align-items: center;
   text-align: center;
-  margin: 10px;
 }
 
 #forecastContainer p {
@@ -170,14 +167,14 @@ header {
 }
 
 #join-card {
-  padding: 25px;
   text-align: center;
   font-size: 1.4rem;
   margin: 25px;
+  line-height: 1.5;
 }
 
 #join-card p {
-  margin-bottom: 50px;
+  margin-bottom: 20px;
 }
 
 .joinBtn {
@@ -527,8 +524,7 @@ form input:required:valid {
 }
 
 #directory-title {
-  padding-bottom: 25px;
-  font-size: 2.5rem;
+  font-size: 2.25rem;
   text-align: center;
   font-family: 'Permanent Marker'
 }
